apps/appiecal-sync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appiecal-sync
  namespace: default
  annotations:
    secrets.phase.dev/redeploy: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appiecal-sync
  template:
    metadata:
      labels:
        app: appiecal-sync
    spec:
      containers:
        - name: appiecal-sync
          image: ghcr.io/ijskoud/appiecal-sync@sha256:1d23512145be5e615bd7d79bb68d0d66fccc5eeece14a58bbcd411dbb7bba6da
          ports:
            - containerPort: 8080
