apps/appiecal-sync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appiecal-sync
  namespace: default
spec:
  selector:
    app: appiecal-sync
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
