apps/appiecal-sync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appiecal-sync
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: appiecal-sync.k3s.home.klrnbk.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appiecal-sync
                port:
                  number: 80
